--- a/Documentation/documentation.html
+++ b/Documentation/documentation.html
@@ -168,16 +168,16 @@
                   <span class="nav-link-inner--text">Examples</span>
                 </a>
                 <div class="dropdown-menu">
-                  <a href="../examples/landing.html" class="dropdown-item"
+                  <a href="../landing.html" class="dropdown-item"
                     >Landing</a
                   >
-                  <a href="../examples/profile.html" class="dropdown-item"
+                  <a href="../profile.html" class="dropdown-item"
                     >Profile</a
                   >
-                  <a href="../examples/login.html" class="dropdown-item"
+                  <a href="../login.html" class="dropdown-item"
                     >Login</a
                   >
-                  <a href="../examples/register.html" class="dropdown-item"
+                  <a href="../register.html" class="dropdown-item"
                     >Register</a
                   >
                 </div>
