--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 color="e34524" bolt-logo="icon.png"></script>
 -->
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <title>My Tax Planners - Income Tax, GST, Business Compliances</title>
+    <title>Workify India - Hire Skilled/Unskilled Workers</title>
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
